--- a/app.json
+++ b/app.json
@@ -1,12 +1,8 @@
 {
   "expo": {
-    "name": "ubeya",
-    "slug": "ubeya",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "expo-chat-redux-toolkit",
+    "slug": "expo-chat-redux-toolkit",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
